[package]
authors = ["Judge Maygarden <judge@jmaygarden.com>"]
categories = ["asynchronous", "database"]
description = """
A Tower service for asynchronous Redis request/response performed over a
managed, multplexed connection.
"""
documentation = "https://docs.rs/tower-redis/0.1.0"
edition = "2018"
homepage = "https://github.com/jmaygarden/tower-redis"
license = "MIT"
name = "tower-redis"
readme = "README.md"
repository = "https://github.com/jmaygarden/tower-redis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.4", features = ["util"] }
