[package]
authors = ["Judge Maygarden <judge@jmaygarden.com>"]
categories = ["asynchronous", "database"]
description = """
A Tower service for asynchronous Redis request/response performed over a
managed, multplexed connection.
"""
documentation = "https://docs.rs/tower-redis/0.2.1"
edition = "2021"
homepage = "https://github.com/jmaygarden/tower-redis"
license = "MIT"
name = "tower-redis"
readme = "README.md"
repository = "https://github.com/jmaygarden/tower-redis"
version = "0.3.0"

[features]
default = ["util"]
util = ["tower/util"]

[dependencies]
redis = { version = "0.25", features = ["connection-manager", "tokio-comp"] }
tower = { version = "0.4", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.4", features = ["util"] }
